1999-02-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-mime.c (gnome_mime_type_or_default): If no extension is
	found, only scan the regular expressions.

Sat Feb 20 03:11:29 1999  Timur Bakeyev <mc@bat.ru>

	* parse-path.cP (GNOME_CONFIG_PARSE_ERROR): Declared static, as other-
	wise it polute global namespase (and gives linker errors).

1999-02-18  Felix Bellaby <felix@pooh.u-net.com>

	* parse-path.cP (parse_path): warn when invalid paths are parsed.

1999-02-17  Elliot Lee  <sopwith@redhat.com>

	* gnome-util.c: As per the warning (which has been there for
	almost a month) g_copy_strings disappears, replaced by g_strconcat.

1999-02-16  Ulrich Drepper  <drepper@cygnus.com>

	* libgnome/gnome-mime.c (add_to_key): Likewise.
	* libgnome/gnome-config.c (check_path): Likewise.
	* libgnome/gnome-score.c (gnome_score_get_notable): Likewise.
	
1999-02-16  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-metadata.c (worker): Added missing call to unlock

1999-02-13  Tom Tromey  <tromey@cygnus.com>

	* gnome-metadata.c (ZERO): New macro.
	(metadata_set): Zero DBTs.
	(metadata_get_list): Likewise.
	(metadata_get_no_dup): Likewise.
	(gnome_metadata_list): Likewise.
	(try_regexs): Likewise.
	(metadata_remove): Don't reuse return value from db.

Thu Feb 11 23:56:18 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry.c,gnome-url.c: use gnome_config_sync_file instead of
	  gnome_config_sync

1999-02-10  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-metadata.c (app_get_by_type): Do not try to lookup the
	metadata if no information sources were found or loaded.

	* gnome-mime.c (mime_fill_from_file): Remove trailing ':'

	* gnome-paper.c: Use new names GnomePaper and GnomeUnit.  Keep the
	old versions for compatibility with other apps.

1999-02-09  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-exec.c (gnome_execute_shell): no semantic changes at this
	point in the release schedule.  If you need the stuff not to close
	file descriptors, use the proper API.
